--- a/blu-motos/src/app/components/footer/footer.component.html
+++ b/blu-motos/src/app/components/footer/footer.component.html
@@ -1,1 +1,12 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="container">
+    <div class="footer-logo">
+      <img src="assets/footer-logo.png" alt="Blu Motos Logo">
+    </div>
+    <div class="footer-content">
+      <p>© 2024 Blu Motos. Todos os direitos reservados.</p>
+      <p>by Lucas Fritzke</p>
+    </div>
+  </div>
+</footer>
+
