--- a/blu-motos/src/app/components/handler/handler.component.html
+++ b/blu-motos/src/app/components/handler/handler.component.html
@@ -1,3 +1,4 @@
-<header class="d-flex justify-content-between align-items-center py-3">
-  <img src="../../../../public/assets/logo.png" alt="Blu Motos" class="logo" />
+<header>
+  <img src="assets/logo.png" alt="Logo" class="logo">
 </header>
+
