--- a/blu-motos/src/styles.css
+++ b/blu-motos/src/styles.css
@@ -1,1 +1,62 @@
-/* You can add global styles to this file, and also import other style files */
+/* Estilos Globais */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f8f9fa;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.card {
+  background-color: #e0e0e0;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.card-title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.btn {
+  background-color: #dc3545;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-align: center;
+}
+
+.btn:hover {
+  background-color: #c82333;
+}
+
+footer {
+  text-align: center;
+  background-color: #343a40;
+  color: #fff;
+  padding: 10px;
+  margin-top: 20px;
+}
+
+/* Configuração para ocupar a altura total */
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+/* Configuração do container principal */
+#page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Ocupa toda a altura da viewport */
+}
+
