corrigindo os pacotes

--- a/blu-motos/src/app/app.component.html
+++ b/blu-motos/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-handler></app-handler>
 <app-nav></app-nav>
-<router-outlet></router-outlet>
+<router-outlet>
+
+</router-outlet>
 <app-footer></app-footer>
