--- a/blu-motos/src/app/components/inicio/inicio.component.html
+++ b/blu-motos/src/app/components/inicio/inicio.component.html
@@ -1,17 +1,33 @@
-
-<div class="container">
-  <div class="images">
-    <img src="assets/inicio-img-01.jpg" alt="Moto na oficina" class="image">
-    <img src="assets/inicio-img-02.jpg" alt="Ferramentas" class="image">
-  </div>
-  <div class="text">
-    <p>
-      A Blu Motos é uma oficina especializada em manutenção e personalização de motocicletas,
-      comprometida em oferecer serviços de alta qualidade para apaixonados por motos. Nossa
-      equipe é composta por profissionais experientes e dedicados, prontos para cuidar de cada
-      detalhe e garantir que sua moto esteja sempre em perfeitas condições. Seja para um conserto,
-      revisão ou customização, na Blu Motos você encontra o cuidado e a atenção que sua moto merece.
-    </p>
+<div class="inicio-container">
+  <div class="inicio-section">
+    <div class="inicio-texto">
+      <img src="assets/inicio-img-01.jpg" alt="Moto na oficina">
+      <div class="description">
+        <p>
+          A Blu Motos é uma oficina especializada em manutenção e personalização de motocicletas,
+          comprometida em oferecer serviços de alta qualidade para apaixonados por motos.
+        </p>
+        <p>
+          Nossa equipe é composta por profissionais experientes e dedicados, prontos para cuidar
+          de cada detalhe e garantir que sua moto esteja sempre em perfeitas condições. Desde
+          consertos mecânicos até a customização de motos, trabalhamos para transformar sua moto
+          em algo único e personalizado, com um toque de qualidade.
+        </p>
+        <p>
+          Seja para uma revisão completa, reparos específicos ou um projeto de customização,
+          conte com a Blu Motos para um atendimento personalizado e cuidadoso.
+        </p>
+      </div>
+    </div>
+    <div class="inicio-texto">
+      <img src="assets/inicio-img-02.jpg" alt="Ferramentas organizadas">
+      <div class="description">
+        <p>
+          Nosso espaço conta com uma variedade de ferramentas e equipamentos modernos que permitem
+          realizar serviços com precisão e eficiência. Cuidamos de todos os detalhes para que o
+          resultado final seja sempre impecável e supere as expectativas de nossos clientes.
+        </p>
+      </div>
+    </div>
   </div>
 </div>
-
