--- a/blu-motos/src/app/components/clientes/cadastrar-cliente/cadastrar-cliente.component.html
+++ b/blu-motos/src/app/components/clientes/cadastrar-cliente/cadastrar-cliente.component.html
@@ -1,14 +1,14 @@
 <main>
   <div class="cadastro-container">
     <h2>Cadastro de Clientes</h2>
-    <form class="cadastro-form" (ngSubmit)="criarCliente()">
+    <form class="cadastro-form" (ngSubmit)="criarCliente()" #clienteForm="ngForm">
       <div class="form-group">
         <label for="nome">Nome</label>
         <input
           type="text"
           id="nome"
           [(ngModel)]="cliente.nome"
-          name="cadastrarCliente"
+          name="nome"
           required>
       </div>
       <div class="form-group">
@@ -27,7 +27,7 @@
         <label for="email">E-mail</label>
         <input type="email" id="email" name="email" [(ngModel)]="cliente.email" required>
       </div>
-      <button type="submit" class="btn-submit">Enviar</button>
+      <button type="submit" class="btn-submit" [disabled]="!clienteForm.valid">Enviar</button>
     </form>
   </div>
 </main>
