--- a/blu-motos/src/app/components/nav/nav.component.html
+++ b/blu-motos/src/app/components/nav/nav.component.html
@@ -8,7 +8,7 @@
           <a class="dropbtn">Clientes</a>
           <div class="dropdown-content">
             <a routerLink="/cadastrar-cliente" routerLinkActive="router-link-active">Cadastrar</a>
-            <a routerLink="/consultarClientes" routerLinkActive="router-link-active">Consultar</a>
+            <a routerLink="/consultar-cliente" routerLinkActive="router-link-active">Consultar</a>
           </div>
         </li>
 
