--- a/blu-motos/src/app/components/nav/nav.component.html
+++ b/blu-motos/src/app/components/nav/nav.component.html
@@ -5,21 +5,23 @@
         <li><a routerLink="/inicio" routerLinkActive="router-link-active">Início</a></li>
 
         <li class="dropdown">
-          <a class="dropbtn">Clientes</a>
+          <a class="dropbtn">Cadastros</a>
           <div class="dropdown-content">
-            <a routerLink="/cadastrar-cliente" routerLinkActive="router-link-active">Cadastrar</a>
-            <a routerLink="/consultar-cliente" routerLinkActive="router-link-active">Consultar</a>
+            <a routerLink="/cadastrar-cliente" routerLinkActive="router-link-active">Clientes</a>
+            <a routerLink="/consultar-cliente" routerLinkActive="router-link-active">Fornecedores</a>
+            <a routerLink="/consultar-cliente" routerLinkActive="router-link-active">Produtos</a>
           </div>
         </li>
 
         <li class="dropdown">
-          <a class="dropbtn">Serviços</a>
+          <a class="dropbtn">Servicos</a>
           <div class="dropdown-content">
             <a routerLink="/novoServico" routerLinkActive="router-link-active">Novo</a>
-            <a routerLink="/consultarServicos" routerLinkActive="router-link-active">Consultar</a>
+            <a routerLink="/consultarServicos" routerLinkActive="router-link-active">Em Andamento</a>
+            <a routerLink="/consultarServicos" routerLinkActive="router-link-active">Concluidos</a>
           </div>
         </li>
-
+        <li><a routerLink="/relatorio" routerLinkActive="router-link-active">Orçamentos</a></li>
         <li><a routerLink="/relatorio" routerLinkActive="router-link-active">Relatórios</a></li>
       </ul>
     </div>
