--- a/blu-motos/src/app/components/nav/nav.component.html
+++ b/blu-motos/src/app/components/nav/nav.component.html
@@ -7,22 +7,22 @@
         <li class="dropdown">
           <a class="dropbtn">Cadastros</a>
           <div class="dropdown-content">
-            <a routerLink="/cadastrar-cliente" routerLinkActive="router-link-active">Clientes</a>
-            <a routerLink="/consultar-cliente" routerLinkActive="router-link-active">Fornecedores</a>
-            <a routerLink="/consultar-cliente" routerLinkActive="router-link-active">Produtos</a>
+            <a routerLink="/clientes" routerLinkActive="router-link-active">Clientes</a>
+            <a routerLink="/fornecedores" routerLinkActive="router-link-active">Fornecedores</a>
+            <a routerLink="/produtos" routerLinkActive="router-link-active">Produtos</a>
           </div>
         </li>
 
         <li class="dropdown">
           <a class="dropbtn">Servicos</a>
           <div class="dropdown-content">
-            <a routerLink="/novoServico" routerLinkActive="router-link-active">Novo</a>
-            <a routerLink="/consultarServicos" routerLinkActive="router-link-active">Em Andamento</a>
-            <a routerLink="/consultarServicos" routerLinkActive="router-link-active">Concluidos</a>
+            <a routerLink="/cadastrar-os" routerLinkActive="router-link-active">Novo</a>
+            <a routerLink="/consulta-os-em-andamento" routerLinkActive="router-link-active">Em Andamento</a>
+            <a routerLink="/consulta-os-em-andamento" routerLinkActive="router-link-active">Concluidos</a>
           </div>
         </li>
-        <li><a routerLink="/relatorio" routerLinkActive="router-link-active">Orçamentos</a></li>
-        <li><a routerLink="/relatorio" routerLinkActive="router-link-active">Relatórios</a></li>
+        <li><a routerLink="/orcamentos" routerLinkActive="router-link-active">Orçamentos</a></li>
+        <li><a routerLink="/relatorios" routerLinkActive="router-link-active">Relatórios</a></li>
       </ul>
     </div>
   </nav>
